name:                    site
version:                 1.0.0
synopsis:                The Shift
homepage:                http://theshift.show
author:                  Gordon Fontenot <gordon@fonten.io>
maintainer:              Gordon Fontenot <gordon@fonten.io>
build-type:              Simple
cabal-version:           >= 1.10

executable site
  default-language:      Haskell2010
  hs-source-dirs:        src
  main-is:               Site.hs
  ghc-options:           -Wall -threaded

  build-depends:         base
                       , hakyll == 4.7.*
                       , pandoc
                       , filepath

  default-extensions:    OverloadedStrings

source-repository head
  type:                 git
  location:             https://github.com/TheShiftShow/website-source
